@@ -69,6 +69,7 @@
 <xi:include href="rndesktop.xml"/>
 <xi:include href="rncontrolcenter.xml"/>
 <xi:include href="rnapplets.xml"/>
+<xi:include href="rngames.xml"/>
 <xi:include href="rna11y.xml"/>
   </sect1>
   <sect1 id="rnapplications">
