@@ -1,0 +1,34 @@
+<?xml version="1.0"?>
+<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+                  "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+<!ENTITY urlfiguresbase "../figures/">
+<!ENTITY version "2.4">
+]>
+<sect2 id="rngames">
+  <title>Games</title>
+  <para>No computer experience is complete without games, and GNOME Games' new
+  maintainer Callum McKenzie has put together a package for users'
+  enjoyment.</para>
+  <para>Included in GNOME &version; is a new blackjack game by Jon McCann:
+<!--    
+    <figure id="rnblackjack"> 
+        <title>Blackjack</title> 
+        <screenshot> 
+        <mediaobject> 
+          <imageobject><imagedata fileref="&urlfiguresbase;blackjack.png"
+			format="PNG"/> 
+          </imageobject>
+ 	  <textobject> 
+ 	    <phrase>Blackjack
+            </phrase> 
+          </textobject> 
+        </mediaobject> 
+	</screenshot> 
+      </figure> 
+-->
+    Other GNOME Games improvements include widespread use of Gconf for
+ 	    configuration and extenive attention to usability and consistence
+ 	    via the GNOME Human Interface Guidelines.
+
+  </para>
+</sect2>
