@@ -91,6 +91,15 @@
 	adding nice touches to the bookmarks views like sorting</para>
     </listitem>
   <listitem>
+      <para> Steve Chaplin, for making gnomine really shine</para>
+    </listitem>
+   <listitem>
+      <para></para>
+    </listitem>
+   <listitem>
+      <para></para>
+    </listitem>
+   <listitem>
       <para></para>
     </listitem>
   
